[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://assets/font/Luckiest_Guy/LuckiestGuy-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/song/Twister Tetris 2.wav" type="AudioStream" id=3]

[sub_resource type="DynamicFont" id=1]
size = 100
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 40
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="TitleScreen" type="Node"]
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 958.0
margin_bottom = 721.0
color = Color( 0.121569, 0.113725, 0.172549, 1 )

[node name="Logo" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( -52, 55 )
scale = Vector2( 1.1, 1.1 )
__meta__ = {
"_edit_group_": true
}

[node name="T" type="Label" parent="Logo"]
margin_left = 105.455
margin_top = 93.6364
margin_right = 184.455
margin_bottom = 298.636
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.890196, 0.443137, 0.0627451, 1 )
text = "T
"
align = 1
autowrap = true
uppercase = true

[node name="E" type="Label" parent="Logo"]
margin_left = 170.455
margin_top = 93.6364
margin_right = 249.455
margin_bottom = 298.636
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.894118, 0.937255, 0.12549, 1 )
text = "E
"
align = 1
autowrap = true
uppercase = true

[node name="T2" type="Label" parent="Logo"]
margin_left = 235.455
margin_top = 94.6364
margin_right = 314.455
margin_bottom = 299.636
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.266667, 0.862745, 0.105882, 1 )
text = "T
"
align = 1
autowrap = true
uppercase = true

[node name="R" type="Label" parent="Logo"]
margin_left = 305.455
margin_top = 94.6364
margin_right = 384.455
margin_bottom = 299.636
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.113725, 0.274061, 0.921569, 1 )
text = "R"
align = 1
autowrap = true
uppercase = true

[node name="I" type="Label" parent="Logo"]
margin_left = 364.455
margin_top = 93.6364
margin_right = 443.455
margin_bottom = 298.636
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.921569, 0.188235, 0.113725, 1 )
text = "I"
align = 1
autowrap = true
uppercase = true

[node name="S" type="Label" parent="Logo"]
margin_left = 416.455
margin_top = 94.6364
margin_right = 495.455
margin_bottom = 299.636
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.960784, 0.286275, 0.858824, 1 )
text = "S"
align = 1
autowrap = true
uppercase = true

[node name="C" type="Label" parent="Logo"]
margin_left = 510.909
margin_top = 92.8182
margin_right = 589.909
margin_bottom = 297.818
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.890196, 0.443137, 0.0627451, 1 )
text = "C"
align = 1
autowrap = true
uppercase = true

[node name="L" type="Label" parent="Logo"]
margin_left = 574.909
margin_top = 94.8182
margin_right = 653.909
margin_bottom = 299.818
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.894118, 0.937255, 0.12549, 1 )
text = "L"
align = 1
autowrap = true
uppercase = true

[node name="O" type="Label" parent="Logo"]
margin_left = 638.909
margin_top = 91.8182
margin_right = 717.909
margin_bottom = 296.818
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.266667, 0.862745, 0.105882, 1 )
text = "O"
align = 1
autowrap = true
uppercase = true

[node name="N" type="Label" parent="Logo"]
margin_left = 714.909
margin_top = 91.8182
margin_right = 793.909
margin_bottom = 296.818
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.113725, 0.27451, 0.921569, 1 )
text = "N"
align = 1
autowrap = true
uppercase = true

[node name="E2" type="Label" parent="Logo"]
margin_left = 783.909
margin_top = 91.8182
margin_right = 862.909
margin_bottom = 296.818
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.921569, 0.188235, 0.113725, 1 )
text = "E"
align = 1
autowrap = true
uppercase = true

[node name="Start" type="ColorRect" parent="."]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -140.0
margin_top = -40.0
margin_right = 140.0
margin_bottom = 30.0
color = Color( 0.305882, 0.321569, 0.380392, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="StartButton" type="Button" parent="Start"]
margin_right = 281.0
margin_bottom = 69.0
custom_fonts/font = SubResource( 2 )
text = "START"
flat = true

[node name="Music" type="ColorRect" parent="."]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -139.0
margin_top = 53.0
margin_right = 141.0
margin_bottom = 124.0
color = Color( 0.305882, 0.321569, 0.380392, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="MusicButton" type="Button" parent="Music"]
margin_right = 281.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 2 )
text = "Music: ON"
flat = true

[node name="Tutorial" type="ColorRect" parent="."]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -137.0
margin_top = 149.0
margin_right = 143.0
margin_bottom = 220.0
color = Color( 0.305882, 0.321569, 0.380392, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="TutorialButton" type="Button" parent="Tutorial"]
margin_right = 281.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 2 )
text = "TUTORIAL"
flat = true

[node name="Exit" type="ColorRect" parent="."]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -137.0
margin_top = 243.0
margin_right = 143.0
margin_bottom = 314.0
color = Color( 0.305882, 0.321569, 0.380392, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="ExitButton" type="Button" parent="Exit"]
margin_right = 281.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 2 )
text = "EXIT"
flat = true

[node name="MenuTheme" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
[connection signal="pressed" from="Start/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="Music/MusicButton" to="." method="_on_MusicButton_pressed"]
[connection signal="pressed" from="Tutorial/TutorialButton" to="." method="_on_TutorialButton_pressed"]
[connection signal="pressed" from="Exit/ExitButton" to="." method="_on_ExitButton_pressed"]
